<resources>

    <string name="app_name">FAV\'$hop</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">FAV\'$hop</string>
    
    <!-- activity_main.xml  -->
    <string name="imageButtonFAVIt_description">Just Fav It</string>
    
    <!-- activity_newfav.xml -->
    <string name="title_activity_newfav">FAV\'$hop - Ajout d\'un nouveau favori</string>
    <string name="newfav_header">Nouvel article</string>
    <string name="newfav_bardcode_hint">Saisissez un code barre</string>
    <string name="newfav_article_hint">Nommez votre article</string>
    <string name="newfav_description_hint">Ajoutez une description à votre nouveau favori</string>
    <string name="newfav_price_text">Prix :</string>
    <string name="newfav_price_content">0.0</string>
    <string name="newfav_takepic_button">Ajouter une photo</string>
        <string name="newfav_choosepic_button">Sélectionner une photo</string>
    <string name="newfav_pic_imageview">Photo correspondant à l\'article</string>
    <string name="newfav_save_button">Enregistrer</string>
    
    <!-- activity_favview.xml -->
	<string name="title_activity_favview">FAV\'$hop - Liste de vos favoris</string>
	
	<!-- activity_showfav.xml -->
	<string name="title_activity_showfav">FAV\'$hop - Détail de l\'article</string>
	<string name="scan">Scan</string>
	
	
    
</resources>