<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_main" >
    
        <LinearLayout
        android:id="@+id/layoutBarcode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
	
            
        <Button 
            android:id="@+id/buttonScan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/scan"
            />    
        <EditText
            android:id="@+id/editTextNewFavBarcodeContent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="number"
            android:hint="@string/newfav_bardcode_hint" />

    </LinearLayout>
    
  	<LinearLayout
        android:id="@+id/layoutPrice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/layoutBarcode" >

        <TextView
            android:id="@+id/textViewNewFavPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingRight="5dp"
            android:text="@string/newfav_price_text" />

        <TextView
            android:id="@+id/textViewNewFavPriceContent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/newfav_price_content" />
    </LinearLayout>
    
    <LinearLayout
        android:id="@+id/layoutArticle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/layoutPic" >

        <EditText
            android:id="@+id/editTextNewFavArticleContent"
            android:hint="@string/newfav_article_hint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text" />

    </LinearLayout>
    
    <LinearLayout
        android:id="@+id/layoutPic"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="5"
        android:layout_below="@+id/layoutPrice" >

        <ImageView
            android:id="@+id/imageViewPic"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:src="@android:drawable/ic_popup_disk_full"
            android:contentDescription="@string/newfav_pic_imageview"
            android:clickable="true" />

        <ImageButton
            android:id="@+id/imageButtonTakePic"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/newfav_takepic_button"
            android:src="@android:drawable/ic_menu_camera"
            android:text="@string/newfav_takepic_button" />

        <ImageButton
            android:id="@+id/imageButtonChoosePic"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/newfav_choosepic_button"
            android:contentDescription="@string/newfav_choosepic_button"
            android:src="@android:drawable/ic_menu_gallery" />

    </LinearLayout>
    
    <LinearLayout
        android:id="@+id/layoutDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/layoutArticle" >

        <EditText
            android:id="@+id/editTextNewFavDescription"
            android:layout_width="match_parent"
            android:layout_height="124dp"
            android:ems="10"
            android:inputType="textMultiLine"
            android:hint="@string/newfav_description_hint" />

    </LinearLayout>
    
    <LinearLayout
        android:id="@+id/layoutSave"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/layoutDescription" >

        <Button
            android:id="@+id/buttonSave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/newfav_save_button" />

    </LinearLayout>

</RelativeLayout>